Demo for the issue with following redirects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.cloud.discovery.client.simple.instances.echo[0].instance-id=echo1
-spring.cloud.discovery.client.simple.instances.echo[0].uri=http://postman-echo.com
+server.port=9080
 
-spring.cloud.gateway.routes[0].id=echo
-spring.cloud.gateway.routes[0].uri=lb://echo
-spring.cloud.gateway.routes[0].predicates[0]=Path=/**
-spring.cloud.gateway.routes[0].filters[0]=RewritePath=.+, /get
+spring.cloud.gateway.routes[0].id=proxy
+spring.cloud.gateway.routes[0].uri=http://localhost:${server.port}
+spring.cloud.gateway.routes[0].predicates[0]=Path=/proxy/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
 
 spring.cloud.loadbalancer.ribbon.enabled=false
